--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /src/Azure.Cognitive.Services.Speech.Samples/SpeechtoText/Properties/PublishProfiles
+/src/Azure.Cognitive.Services.Speech.Samples/.vs/Azure.Cognitive.Services.Speech.Samples
