--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -17,8 +17,8 @@ jobs:
       with:
         dotnet-version: 3.1.101    
     - name: Install dependencies
-      run: dotnet restore    
+      run: dotnet restore *.csproj    
     - name: Build
-      run: dotnet build --configuration Release --no-restore    
+      run: dotnet build  *.csproj --configuration Release --no-restore    
     - name: Test
-      run: dotnet test --no-restore --verbosity normal
+      run: dotnet test  *.csproj --no-restore --verbosity normal
