--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -13,12 +13,18 @@ jobs:
       matrix:
         os: [macOS-latest, ubuntu-latest, windows-latest]
     steps:        
+    
     - uses: actions/checkout@v2
-    - name: Setup .NET Core in working directory - $working-directory
+      
+      if: matrix.os == 'macOS-latest' || matrix.os == 'ubuntu-latest'
+    
+    - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.101    
+
     - name: Build
       run: dotnet build $solution --configuration Release    
+
     - name: Test
-      run: dotnet test $solution --no-restore --verbosity normal
+      run: dotnet test $solution --configuration Release --no-restore --verbosity normal
