--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -25,3 +25,8 @@ jobs:
     - name: Test on ${{ matrix.os }}
       working-directory: './src/Azure.Cognitive.Services.Speech.Samples/'
       run: dotnet test $solution --configuration Release --no-restore --verbosity normal
+    - name: Archive files on ${{ matrix.os }}
+      uses: actions/upload-artifact@v1
+      with: 
+        name: dist
+        path: ./publish_output
