--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -23,7 +23,7 @@ jobs:
       working-directory: './src/Azure.Cognitive.Services.Speech.Samples/'
       run: dotnet build $solution --output ./publish_output --configuration Release  
     - name: Directory
-      run: ls -l './src/Azure.Cognitive.Services.Speech.Samples/'
+      run: ls -l './src/Azure.Cognitive.Services.Speech.Samples/publish_output'
     - name: Test on ${{ matrix.os }}
       working-directory: './src/Azure.Cognitive.Services.Speech.Samples/'
       run: dotnet test $solution --configuration Release --no-restore --verbosity normal
@@ -31,4 +31,4 @@ jobs:
       uses: actions/upload-artifact@v1
       with: 
         name: dist
-        path: ./publish_output
+        path: './src/Azure.Cognitive.Services.Speech.Samples/publish_output'
