--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -17,14 +17,16 @@ jobs:
         os: [macOS-latest, ubuntu-latest, windows-latest]
     steps:            
     - uses: actions/checkout@v2        
-    - name: Setup .NET Core for ${{ matrix.os }}
+    - name: If Unix, Setup .NET Core for ${{ matrix.os }}
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.101    
       if: matrix.os == 'macOS-latest' || matrix.os == 'ubuntu-latest'
+
     - name: Build on ${{ matrix.os }}
       working-directory: './src/Azure.Cognitive.Services.Speech.Samples/'
       run: dotnet build $solution --output ./publish_output --configuration Release  
+
     - name: Test on ${{ matrix.os }}
       working-directory: './src/Azure.Cognitive.Services.Speech.Samples/'
       run: dotnet test $solution --configuration Release --no-restore --verbosity normal
@@ -35,16 +37,16 @@ jobs:
         name: dist-${{ matrix.os }}
         path: './src/Azure.Cognitive.Services.Speech.Samples/publish_output'
 
-      if: matrix.os == 'windows-latest'
     - name: Login via Azure CLI
       uses: azure/login@v1
       with:
        creds: ${{ secrets.AZURE_CREDENTIALS }}
-      
-      if: matrix.os == 'windows-latest'     
+      if: matrix.os == 'windows-latest'
+
     - name: 'Run Azure Functions Action'
       uses: Azure/functions-action@v1
       id: fa
       with:
         app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
-        package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/output'
+        package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
+      if: matrix.os == 'windows-latest'
