--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Login via Azure CLI
       uses: azure/login@v1
       with:
-       creds: ${{ secrets.AZURE_CREDENTIALS }}
+       creds: ${{ secrets.SCM_CREDENTIALS }}
       if: matrix.os == 'windows-latest'
     
     - name: If Unix, Setup .NET Core for ${{ matrix.os }}
